--- a/app/src/main/res/drawable/swoosh_button.xml
+++ b/app/src/main/res/drawable/swoosh_button.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#64000000"></solid>
     <stroke android:color="@android:color/white"
-        android:width="2dp" />
+        android:width="2dp" > </stroke>
 
 </shape>
